# trainpulse

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: anomaly_detection.py  basic_monitoring.py  with_datamix.py
scripts/: generate_assets.py
src/trainpulse/: __init__.py  _types.py  callbacks.py  cli.py  cost.py  detectors.py  early_stopping.py  monitor.py  report.py  smoothing.py  spectral.py  statistical.py  wandb_callback.py
tests/: test_callbacks.py  test_cli.py  test_cost.py  test_detectors.py  test_early_stopping.py  test_monitor.py  test_report.py  test_smoothing.py  test_spectral.py  test_statistical.py  test_types.py  test_wandb_callback.py
